# brackend

./: .gitignore  Dockerfile  README.md  alembic.ini  build.sh  db-connect.sh  db-init.sh  delete-everything-lol.sh  docker-compose.ci.yml  docker-compose.yml  flask-app.sh  pyproject.toml  restart.sh
.github/workflows/: pytest.yml
alembic/: env.py
alembic/versions/: 32d58879aac1_tournament_schema.py  35af944ce3dd_006_unique_uid.py  5f773c2e7b46_005_fix_ref.py  7be264663c29_adding_game_field_as_varchar255.py  82c1df0542a7_fix_bracket_id_for_user_tournament.py  8d7ed542163c_004_enumify.py  9b2bc7ef5675_add_tournament_description_start_end_.py  9bea906e3151_add_bracket_id_to_user_tournament.py  d79bb9d29e57_tournament_schema_v2.py  de23d4edb0e2_first.py
brackend/: __init__.py  app.py  delete_everything.py  delete_firebase_users.py  mock_rounds.json  schema.py  schemagen.py  util.py  wsgi.py
brackend/db/: enums.py  models.py
brackend/endpoints/: brackets.py  tournaments.py  users.py
brackend/endpoints/brackets/: brackets.py
brackend/endpoints/brackets/repositories/: BracketRepository.py
brackend/endpoints/tournaments/: tournaments.py
brackend/endpoints/tournaments/repositories/: TournamentRepository.py
brackend/repositories/: BracketRepository.py  TournamentRepository.py
brackend/tasks/: auth.py  tasks.py
orm/orm/: settings.py  urls.py
